k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipchoice-deployment
spec:
  selector:
    matchLabels:
      app: shipchoice
  replicas: 1
  template:
    metadata:
      labels:
        app: shipchoice
    spec:
      containers:
        - name: shipchoice
          image: gcr.io/shipchoice-20180716/shipchoice:0.2.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
