k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipchoice
  labels:
    app: shipchoice
spec:
  type: NodePort
  selector:
    app: shipchoice
  ports:
    - port: 8080
      targetPort: 8080
